<resources>
    <string name="app_name">GFO</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">회원가입</string>
    <string name="action_log_in">로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="go_back">이전으로 돌아가기</string>
    <string name="confirm">확인</string>
    <string name="et_name">이름을 입력해주세요.</string>
    <string name="et_id">아이디를 입력해주세요.</string>
    <string name="et_password">비밀번호를 입력해주세요.</string>
    <string name="et_password_re">비밀번호를 다시 입력해주세요.</string>
    <string name="et_email">이메일을 입력해주세요.</string>
    <string name="et_auth_num">인증번호를 입력해주세요.</string>

    <string name="gsm_">GSM의 \n모든 정보를\n공유하다</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="member_ask">아직 회원이 아니신가요?</string>
    <string name="auto_login">자동로그인</string>
    <string name="save_id">아이디저장</string>
    <string name="write_email">이메일을 입력해 주세요.</string>
    <string name="auth_check_alert">등록할때 사용했던 학교 이메일을 작성해 주세요.</string>
    <string name="gfo_start">GSM에게만 \n열린 포럼, GFO \n지금 질문하러 가볼까요?</string>
    <string name="auth_code">인증번호를 입력해주세요.</string>
    <string name="check_code">전송된 인증번호를 확인해주세요.</string>
    </resources>