<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="goBack"
            type="com.msg.gfo_v2.gfo.ui.component.login.FindPasswordActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_find_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.048" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_forgot_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.118" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_alert_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.301" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_et_email_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_et_auth_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.452" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_btn_confirm_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.59" />
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_find_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.078" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_forgot_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.171" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_alert_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.346" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_et_email_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.427" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_et_auth_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.519" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_btn_confirm_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.656" />
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_find_s"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.119" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_et_s"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0549" />
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_find_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.416" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_back_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.105" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_forgot_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.708" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_alert_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.844" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_et_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.948" />
        
        
        <TextView
            android:layout_width="107dp"
            android:layout_height="0dp"
            android:text="@string/find_password"
            android:textSize="18sp"
            android:fontFamily="@font/notosans"
            android:textColor="@color/black"
            android:gravity="top"
            android:onClick="@{goBack::onClickPageBtn}"
            app:layout_constraintTop_toTopOf="@id/g_tv_find_t"
            app:layout_constraintBottom_toBottomOf="@id/g_tv_find_b"
            app:layout_constraintStart_toStartOf="@id/g_tv_find_s"
            app:layout_constraintEnd_toEndOf="@id/g_tv_find_e" />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="235dp"
            android:layout_height="0dp"
            android:text="@string/forgot_password_e"
            android:textSize="27sp"
            android:textColor="@color/g_fo_blue"
            android:fontFamily="@font/notosans"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/g_tv_forgot_t"
            app:layout_constraintBottom_toBottomOf="@id/g_tv_forgot_b"
            app:layout_constraintStart_toStartOf="@id/g_et_s"
            app:layout_constraintEnd_toEndOf="@id/g_tv_forgot_e"/>
        <TextView
            android:id="@+id/g_tv_alert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/auth_check_alert"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosans"
            app:layout_constraintTop_toTopOf="@id/g_tv_alert_t"
            app:layout_constraintBottom_toBottomOf="@id/g_tv_alert_b"
            app:layout_constraintStart_toStartOf="@id/g_et_s"
            app:layout_constraintEnd_toEndOf="@id/g_tv_alert_e" />
        
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_left_arrow_svgrepo_com"
            android:onClick="@{goBack::onClickPageBtn}"
            app:layout_constraintTop_toTopOf="@id/g_tv_find_t"
            app:layout_constraintBottom_toBottomOf="@id/g_tv_find_b"
            app:layout_constraintStart_toStartOf="@id/g_et_s"
            app:layout_constraintEnd_toEndOf="@id/g_back_e"/>
        
        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/et_email"
            android:textSize="14sp"
            android:textColor="#999999"
            android:background="@drawable/bg_edittext"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="@id/g_et_email_t"
            app:layout_constraintBottom_toBottomOf="@id/g_et_email_b"
            app:layout_constraintStart_toStartOf="@id/g_et_s"
            app:layout_constraintEnd_toEndOf="@id/g_et_e" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:hint="@string/et_auth_num"
            android:textSize="14sp"
            android:textColor="#999999"
            android:background="@drawable/bg_edittext"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="@id/g_et_auth_t"
            app:layout_constraintBottom_toBottomOf="@id/g_et_auth_b"
            app:layout_constraintStart_toStartOf="@id/g_et_s"
            app:layout_constraintEnd_toEndOf="@id/g_et_e" />
        
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosans"
            android:background="@drawable/btn_login"
            app:layout_constraintTop_toTopOf="@id/g_btn_confirm_t"
            app:layout_constraintBottom_toBottomOf="@id/g_btn_confirm_b"
            app:layout_constraintStart_toStartOf="@id/g_et_s"
            app:layout_constraintEnd_toEndOf="@id/g_et_e" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>